--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -66,7 +66,9 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
     "@mdi/font": "^4.5.95",
     "@mdi/js": "^3.8.95",
@@ -84,12 +86,12 @@
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
     "dotenv": "^8.0.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.6.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-jest": "^22.13.6",
     "fibers": "^4.0.1",
     "file-loader": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^1.4.3",
+    "fork-ts-checker-webpack-plugin": "^1.6.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "happypack": "^5.0.1",
     "identity-obj-proxy": "^3.0.0",
@@ -105,8 +107,8 @@
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "ts-loader": "^6.0.4",
-    "tslint": "^5.18.0",
+    "ts-loader": "^6.2.2",
+    "tslint": "^5.20.1",
     "url-loader": "^2.1.0",
     "vue-meta": "^2.0.5",
     "vue-router": "^3.0.7",
