--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "eslint-plugin-vuetify": "^1.0.0-beta.4",
+    "eslint-plugin-vue": "^7.0.0-beta.1",
+    "eslint-plugin-vuetify": "^1.0.0-beta.7",
     "husky": "^3.0.1",
     "inquirer": "^6.5.0",
     "jest": "^24.8.0",
@@ -54,8 +54,8 @@
     "tslint": "^5.18.0",
     "typescript": "^3.8.2",
     "typestrict": "^1.0.2",
-    "vue": "^3.0.0-beta.2",
-    "vue-loader": "^16.0.0-alpha.1",
+    "vue": "^3.0.0-rc.5",
+    "vue-loader": "^16.0.0-beta.4",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-merge": "^4.2.1"
