chore: make faSvg available in the dev environment

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -70,6 +70,9 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "@mdi/font": "^4.5.95",
     "@mdi/js": "^3.8.95",
     "@types/jest": "^24.9.1",
