--- a/packages/docs-next/package.json
+++ b/packages/docs-next/package.json
@@ -1,56 +1,38 @@
 {
   "name": "docs-next",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "build:all": "yarn build:client && yarn build:server && yarn prerender",
     "build:api": "node build/api-gen",
     "build:client": "yarn build",
     "build:modified": "node build/modified",
     "build:server": "cross-env WEBPACK_TARGET=node yarn build --no-clean",
     "dev": "yarn serve",
-    "serve": "vue-cli-service serve",
-    "lint": "vue-cli-service lint",
-    "lint:md": "markdownlint --config .markdownlintrc src/pages/en",
     "fix:md": "markdownlint --config .markdownlintrc src/pages/en --fix",
+    "lint:md": "markdownlint --config .markdownlintrc src/pages/en",
     "prerender": "node build/prerender",
     "prod": "http-server dist --proxy http://localhost:8080/?"
   },
   "dependencies": {
-    "@vue/cli-plugin-pwa": "^4.5.4",
     "core-js": "^3.6.4",
     "docsearch.js": "^2.6.3",
-    "moment": "^2.24.0",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
     "vue-i18n": "^8.17.7",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.3.3",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
     "webpack-node-externals": "^2.5.1"
   },
   "devDependencies": {
     "@mdi/js": "^5.2.45",
-    "@vue/cli-plugin-babel": "~4.5.3",
-    "@vue/cli-plugin-eslint": "~4.5.3",
-    "@vue/cli-plugin-router": "~4.5.3",
-    "@vue/cli-plugin-vuex": "~4.5.3",
-    "@vue/cli-service": "~4.5.3",
-    "@vue/eslint-config-standard": "^5.1.2",
     "@vuetify/vue-cli-plugin-base": "~0.3.5",
     "babel-eslint": "^10.1.0",
     "cosmicjs": "^3.2.43",
     "cross-env": "^7.0.2",
     "date-fns": "^2.14.0",
-    "eslint": "^6.7.2",
-    "eslint-config-vuetify": "^0.6.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "frontmatter-markdown-loader": "^3.5.0",
     "git-date-extractor": "^3.0.0",
     "html-loader": "^1.1.0",
@@ -67,18 +49,15 @@
     "minify-css-string": "^1.0.0",
     "mkdirp": "^1.0.4",
     "raw-loader": "^4.0.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.26.3",
     "sass-loader": "^9.0.2",
     "sitemap-webpack-plugin": "^0.8.1",
     "vee-validate": "^3.3.7",
-    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-cookies": "^1.7.0",
     "vue-gtag": "^1.6.5",
     "vue-meta": "^2.3.3",
     "vue-prism-component": "^1.2.0",
     "vue-server-renderer": "^2.6.11",
-    "vue-template-compiler": "^2.6.11",
     "vuelidate": "^0.7.5",
     "vuetify-loader": "^1.3.0",
     "vuex-pathify": "^1.4.1",
@@ -87,7 +66,17 @@
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-virtual-modules": "^0.2.2"
   },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vuetifyjs/vuetify.git",
+    "directory": "packages/docs-next"
+  },
   "vuePlugins": {
-    "service": ["./plugins/@vuetify/ssg.js"]
+    "service": [
+      "./plugins/@vuetify/ssg.js"
+    ]
   }
 }
