--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,10 +1,9 @@
-"project_identifier": "vuetify"
-"api_key_env": CROWDIN_API_KEY
-"base_path_env": CROWDIN_BASE_PATH
-"preserve_hierarchy": true
-"files": [
-  {
-    "source": "en\\**\\*.json",
-    "translation": "%locale%\\**\\%original_file_name%",
-  }
-]
+project_id_env: CROWDIN_PROJECT_ID
+api_token_env: CROWDIN_PERSONAL_TOKEN
+project_identifier: vuetify
+preserve_hierarchy: true
+files:
+  - source: packages/docs-next/src/pages/en/**/*.md
+    translation: packages/docs-next/src/pages/%locale%/**/%original_file_name%
+  - source: packages/docs-next/src/i18n/messages/en.json
+    translation: packages/docs-next/src/i18n/messages/%locale%.json
