chore: update package.json

--- a/packages/docs-next/package.json
+++ b/packages/docs-next/package.json
@@ -1,16 +1,17 @@
 {
   "name": "docs-next",
-  "version": "0.1.0",
+  "description": "A Vue.js project",
+  "private": true,
+  "author": "John Leider <john@vuetifyjs.com>",
+  "version": "2.3.10",
   "scripts": {
-    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
     "build:all": "yarn build:client && yarn build:server && yarn prerender",
-    "build:api": "node build/api-gen",
     "build:client": "yarn build",
     "build:modified": "node build/modified",
     "build:server": "cross-env WEBPACK_TARGET=node yarn build --no-clean",
-    "dev": "yarn serve",
     "fix:md": "markdownlint --config .markdownlintrc src/pages/en --fix",
     "lint:md": "markdownlint --config .markdownlintrc src/pages/en",
     "prerender": "node build/prerender",
