--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,6 +3,8 @@ api_token_env: CROWDIN_PERSONAL_TOKEN
 project_identifier: vuetify
 preserve_hierarchy: true
 files:
+  - source: packages/api-generator/src/locale/en/**/*.json
+    translation: packages/api-generator/src/locale/%locale%/**/%original_file_name%
   - source: packages/docs-next/src/pages/en/**/*.md
     translation: packages/docs-next/src/pages/%locale%/**/%original_file_name%
   - source: packages/docs-next/src/i18n/messages/en.json
