chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -26,26 +26,66 @@
     "yarn": ">= 1.12.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/helper-create-regexp-features-plugin": "^7.8.8",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/preset-env": "^7.5.5",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "@vue/cli-plugin-babel": "~4.5.3",
+    "@vue/cli-plugin-eslint": "~4.5.4",
+    "cross-env": "^7.0.2",
+    "@vue/cli-plugin-pwa": "^4.5.4",
+    "@vue/cli-plugin-router": "~4.5.3",
+    "@vue/cli-plugin-vuex": "~4.5.3",
+    "@vue/cli-service": "~4.5.3",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "babel-eslint": "^8.2.6",
     "babel-jest": "^24.8.0",
     "cross-spawn": "^6.0.5",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-config-vuetify": "^0.6.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-local-rules": "^0.1.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vuetify": "^1.0.0-beta.6",
+    "eslint": "^7.8.0",
+    "css-loader": "^3.1.0",
     "husky": "^3.0.1",
     "inquirer": "^6.5.0",
-    "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-serializer-html": "^7.0.0",
+    "jest": "^24.8.0",
     "lerna": "^3.16.2",
+    "moment": "^2.27.0",
+    "sass": "^1.22.7",
     "semver": "^6.2.0",
     "shelljs": "^0.8.3",
+    "stylus-loader": "^3.0.1",
+    "stylus": "^0.54.5",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.1",
     "typescript": "^3.9.7",
     "typestrict": "^1.0.2",
-    "vue": "^2.6.11",
+    "vue-analytics": "^5.16.1",
     "vue-loader": "^15.7.1",
-    "webpack": "^4.39.1",
+    "vue-meta": "^2.0.5",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.6.11",
+    "vue": "^2.6.11",
+    "vuetify": "^2.3.1",
+    "vuex": "^3.0.1",
     "webpack-cli": "^3.3.6",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack": "^4.39.1"
   }
 }
