--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -36,6 +36,12 @@
   },
   "devDependencies": {
     "@mdi/js": "^5.2.45",
+    "@vue/cli-plugin-eslint": "~4.5.4",
+    "@vue/cli-plugin-babel": "~4.5.3",
+    "@vue/cli-plugin-pwa": "^4.5.4",
+    "@vue/cli-plugin-router": "~4.5.3",
+    "@vue/cli-plugin-vuex": "~4.5.3",
+    "@vue/cli-service": "~4.5.3",
     "@vuetify/vue-cli-plugin-base": "~0.3.5",
     "cosmicjs": "^3.2.43",
     "date-fns": "^2.14.0",
