chore: don't fix lint errors by default

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,7 +13,8 @@
     "build": "vue-cli-service build",
     "serve": "vue-cli-service serve",
     "dev": "yarn serve",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --no-fix && yarn lint:md",
+    "lint:fix": "vue-cli-service lint && yarn fix:md",
     "build:all": "yarn build:client && yarn build:server && yarn prerender",
     "build:client": "yarn build",
     "build:modified": "node build/modified",
