--- a/.github/workflows/crowdin-uploads.yml
+++ b/.github/workflows/crowdin-uploads.yml
@@ -9,7 +9,7 @@ on:
     - 'packages/api-generator/src/locale/en/**'
     - 'packages/docs-next/src/i18n/messages/en.json'
     - 'packages/docs-next/src/pages/en/**'
-    - '.github/workflows/crowdin-uploads.yml'
+    - '.github/workflows/**'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
