chore: add missing eslint-loader dependency

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@babel/preset-env": "^7.5.5",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
-    "cross-env": "^7.0.2",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^24.8.0",
+    "cross-env": "^7.0.2",
     "cross-spawn": "^6.0.5",
+    "css-loader": "^3.1.0",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^13.0.1",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-local-rules": "^0.1.0",
     "eslint-plugin-node": "^9.1.0",
@@ -48,34 +50,33 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-vuetify": "^1.0.0-beta.6",
-    "css-loader": "^3.1.0",
     "husky": "^3.0.1",
     "inquirer": "^6.5.0",
+    "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-serializer-html": "^7.0.0",
-    "jest": "^24.8.0",
     "lerna": "^3.16.2",
     "moment": "^2.27.0",
     "sass": "^1.22.7",
     "semver": "^6.2.0",
     "shelljs": "^0.8.3",
-    "stylus-loader": "^3.0.1",
     "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.1",
     "typescript": "^3.9.7",
     "typestrict": "^1.0.2",
+    "vue": "^2.6.11",
     "vue-analytics": "^5.16.1",
     "vue-loader": "^15.7.1",
     "vue-meta": "^2.0.5",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.6.11",
-    "vue": "^2.6.11",
     "vuex": "^3.0.1",
+    "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-merge": "^4.2.1",
-    "webpack": "^4.39.1"
+    "webpack-merge": "^4.2.1"
   }
 }
