--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build": "yarn build:client && yarn build:server && yarn prerender",
-    "dev": "vue-cli-service serve",
+    "dev": "yarn serve",
+    "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint --no-fix && yarn lint:md",
     "lint:fix": "vue-cli-service lint && yarn fix:md",
     "build:client": "vue-cli-service build",
