docs(Home): add sponsors section

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -24,6 +24,7 @@
       "exit-ad",
       "highlighted-ad",
       "home-action-btns",
+      "home-sponsors",
       "home-vuetify-logo",
       "icon-list",
       "inline-ad",
