docs: inject meta into ssg output

--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,16 @@
   },
   "rewrites": [
     {
+      "source": "/eo-UY/(.*)",
+      "destination": "/_crowdin"
+    },
+    {
       "source": "/(.*)",
       "destination": "$1"
     },
     {
       "source": "/(.*)",
-      "destination": "/index"
+      "destination": "/_fallback"
     }
   ],
   "github": {
