--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@mdi/js": "^5.2.45",
-    "@vue/cli-plugin-eslint": "~4.5.4",
     "@vue/cli-plugin-babel": "~4.5.3",
+    "@vue/cli-plugin-eslint": "~4.5.4",
     "@vue/cli-plugin-pwa": "^4.5.4",
     "@vue/cli-plugin-router": "~4.5.3",
     "@vue/cli-plugin-vuex": "~4.5.3",
@@ -48,6 +48,7 @@
     "frontmatter-markdown-loader": "^3.5.0",
     "git-date-extractor": "^3.0.0",
     "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.3",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.19",
