--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "dom",
       "dom.iterable"
     ],
-    "allowJs": true,                          /* Allow javascript files to be compiled. */
+    "allowJs": false,                         /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
@@ -63,19 +63,8 @@
     "emitDecoratorMetadata": true             /* Enables experimental support for emitting type metadata for decorators. */
   },
   "exclude": [
-    ".git",
-    ".vscode",
-    "**/*.spec.js",
     "**/*.spec.ts",
-    "coverage",
-    "dist",
-    "es5",
-    "lib-temp",
-    "lib",
-    "node_modules",
-    "styles",
-    "temp",
-    "tmp",
-    "types"
+    "**/*.spec.js",
+    "node_modules"
   ]
 }
