feat(docs): refactored api-gen, moved away from md tables for API (#12184)
* feat(docs): refactored api-gen, moved away from md tables for API

* chore(api-gen): ignore all locales that are not "en"

* chore(api): remove unused code

* fix(api): sort API members

* fix(api): load all sources

* fix(docs): problem with $vuetify API route

* fix(api): incorrect source on v-data-iterator slots

* feat(docs): use proper syntax highlighting for API pages

* fix(docs): align lodash imports

* docs(api): cleanup text helpers

Co-authored-by: MajesticPotatoe <amajesticpotatoe@gmail.com>

--- a/packages/api-generator/package.json
+++ b/packages/api-generator/package.json
@@ -3,10 +3,11 @@
   "version": "2.3.10",
   "private": true,
   "description": "",
-  "main": "dist/api.js",
+  "main": "src/index.js",
   "scripts": {
     "debug": "babel-node inspect src/index.js",
-    "build": "node src/index.js",
+    "dev": "node src/index.js",
+    "build": "node src/export.js",
     "lint": "eslint --ext .js src -f codeframe --max-warnings 0",
     "lint:fix": "yarn lint --fix"
   },
@@ -14,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "deepmerge": "^4.0.0",
+    "rimraf": "^3.0.2",
     "vue": "^2.6.11",
     "vuetify": "^2.3.10"
   },
