--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -78,7 +78,10 @@
     "vuex-router-sync": "^5.0.0",
     "webfontloader": "^1.6.28",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-virtual-modules": "^0.2.2"
+    "webpack-virtual-modules": "^0.2.2",
+    "workbox-precaching": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3"
   },
   "publishConfig": {
     "access": "public"
