docs(Whiteframes): rename files, references, and components to wireframes

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -28,7 +28,7 @@
       "icon-list",
       "inline-ad",
       "kbd",
-      "whiteframe-examples",
+      "wireframe-examples",
       "promoted-ad",
       "random-ad",
       "releases",
