docs(contributing.md): resolve lint issues

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -41,6 +41,7 @@
       "up-next",
       "usage",
       "var",
+      "vuetify-ad",
       "vue-jobs",
       "vuetify-comparison",
       "vuetify-projects",
