docs(Themes): complete vuetify themes page

--- a/packages/docs/.env.example
+++ b/packages/docs/.env.example
@@ -7,3 +7,6 @@ PORT=8080
 VUE_APP_COSMIC_BUCKET_READ_KEY=
 VUE_APP_COSMIC_BUCKET_SLUG=
 VUE_APP_COSMIC_BUCKET_WRITE_KEY=
+
+VUE_APP_COSMIC_BUCKET_SLUG_STORE=
+VUE_APP_COSMIC_BUCKET_READ_KEY_STORE=
