--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,9 @@
   "build": {
     "env": {
       "VUE_APP_COSMIC_BUCKET_SLUG": "@cosmic-bucket-slug",
-      "VUE_APP_COSMIC_BUCKET_READ_KEY": "@cosmic-bucket-read-key"
+      "VUE_APP_COSMIC_BUCKET_READ_KEY": "@cosmic-bucket-read-key",
+      "VUE_APP_COSMIC_BUCKET_SLUG_STORE": "@cosmic-bucket-slug-store",
+      "VUE_APP_COSMIC_BUCKET_READ_KEY_STORE": "@cosmic-bucket-read-key-store"
     }
   },
   "rewrites": [
