chore(package.json): remove port argument from prod script

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -21,7 +21,7 @@
     "lint:md": "markdownlint --config .markdownlintrc src/pages/en",
     "fix:md": "markdownlint --config .markdownlintrc src/pages/en --fix",
     "prerender": "node build/prerender",
-    "prod": "ws -p 8080 -z -d dist"
+    "prod": "ws -z -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.4",
