--- a/.github/workflows/crowdin-uploads.yml
+++ b/.github/workflows/crowdin-uploads.yml
@@ -7,15 +7,15 @@ on:
       - 'docs/import-next'
     paths:
     - 'packages/api-generator/src/locale/en/**'
-    - 'packages/docs-next/src/i18n/messages/en.json'
-    - 'packages/docs-next/src/pages/en/**'
+    - 'packages/docs/src/i18n/messages/en.json'
+    - 'packages/docs/src/pages/en/**'
     - '.github/workflows/**'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
   CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
-  CROWDIN_BRANCH: docs-next
+  CROWDIN_BRANCH: master
 
 jobs:
   upload-to-crowdin:
