--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
     "@mdi/js": "^5.2.45",
+    "@octokit/core": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-eslint": "^8.2.6",
