chore: update vue to v3.0.0

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/helper-create-regexp-features-plugin": "^7.8.8",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.2",
+    "@vue/compiler-sfc": "^3.0.0",
     "babel-jest": "^24.8.0",
     "cross-spawn": "^6.0.5",
     "eslint": "^6.6.0",
@@ -55,8 +55,8 @@
     "tslint": "^5.20.1",
     "typescript": "^3.9.7",
     "typestrict": "^1.0.2",
-    "vue": "^3.0.0-rc.5",
-    "vue-loader": "^16.0.0-beta.4",
+    "vue": "^3.0.0",
+    "vue-loader": "^16.0.0-beta.8",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-merge": "^4.2.1"
