chore(docs): lint md first
eslint is many times slower than markdownlint, better to fail early

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,8 +13,8 @@
     "build": "yarn build:client && yarn build:server && yarn prerender",
     "dev": "yarn serve",
     "serve": "vue-cli-service serve",
-    "lint": "vue-cli-service lint --no-fix && yarn lint:md",
-    "lint:fix": "vue-cli-service lint && yarn fix:md",
+    "lint": "yarn lint:md && vue-cli-service lint --no-fix",
+    "lint:fix": "yarn fix:md && vue-cli-service lint",
     "build:client": "cross-env NODE_ENV=production vue-cli-service build",
     "build:server": "cross-env VUE_APP_WEBPACK_TARGET=node vue-cli-service build --no-clean",
     "build:modified": "node build/modified",
