docs(consulting.md): rename to support, update page links
- renamed calendar component
- remove consulting language
- added direct support language
- resolved bug with related-page not finding text
- added 301 redirect
- removed unused language keys

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -8,6 +8,7 @@
   "MD029": false,
   "MD033": {
     "allowed_elements": [
+      "acuity-calendar",
       "alert",
       "app-img",
       "backmatter",
@@ -16,7 +17,6 @@
       "breakpoints-table",
       "color-palette",
       "component-api",
-      "consulting-calendar",
       "contribute",
       "discovery-ad",
       "entry-ad",
