--- a/package.json
+++ b/package.json
@@ -43,10 +43,9 @@
     "babel-jest": "^26.6.0",
     "cross-env": "^7.0.2",
     "cross-spawn": "^6.0.5",
-    "css-loader": "^3.1.0",
+    "css-loader": "^5.0.0",
     "eslint": "^7.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-local-rules": "^0.1.1",
     "eslint-plugin-node": "^11.1.0",
@@ -64,11 +63,11 @@
     "jest-serializer-html": "^7.0.0",
     "lerna": "^3.16.2",
     "moment": "^2.27.0",
-    "sass": "^1.26.11",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.4",
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "^4.1.1",
     "typescript": "^4.0.3",
     "vue": "^3.0.0",
     "vue-loader": "^16.0.0-beta.8",
@@ -76,9 +75,9 @@
     "vue-meta": "^2.4.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-merge": "^4.2.1"
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-merge": "^5.2.0"
   },
   "resolutions": {
     "workbox-webpack-plugin": "^5.1.3"
