--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -30,7 +30,7 @@
     "url": "https://github.com/sponsors/johnleider"
   },
   "main": "dist/vuetify.js",
-  "module": "dist/vuetify.js",
+  "module": "lib/entry.mjs",
   "jsdelivr": "dist/vuetify.js",
   "unpkg": "dist/vuetify.js",
   "types": "types/index.d.ts",
@@ -43,14 +43,13 @@
     "src/",
     "dist/",
     "lib/",
-    "es5/",
     "types/"
   ],
   "scripts": {
-    "watch": "cross-env TARGET=development webpack --config build/config.js --progress --hide-modules --watch",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.config.js --hot",
-    "build": "concurrently \"yarn build:dist --no-progress\" \"yarn build:lib\" -n \"dist,lib\" --kill-others-on-fail -r && yarn build:json",
-    "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config build/config.js --progress --hide-modules",
+    "watch": "cross-env TARGET=development webpack --config build/config.js --progress --watch",
+    "dev": "cross-env NODE_ENV=development webpack serve --config build/webpack.dev.config.js --hot",
+    "build": "concurrently \"yarn build:dist\" \"yarn build:lib\" -n \"dist,lib\" --kill-others-on-fail -r",
+    "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config build/config.js --progress",
     "build:json": "node build/build-json.js",
     "tsc": "tsc",
     "build:lib": "node build/build-lib.js",
@@ -73,35 +72,28 @@
     "@vue/test-utils": "^2.0.0-beta.7",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-detective": "^2.0.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-transform-define": "^1.3.1",
+    "babel-plugin-add-import-extension": "^1.4.3",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-define": "^2.0.0",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.1",
     "cssnano": "^4.1.10",
     "dotenv": "^8.0.0",
     "eslint-plugin-jest": "^24.1.0",
-    "file-loader": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^1.6.0",
+    "file-loader": "^6.1.1",
+    "fork-ts-checker-webpack-plugin": "^5.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "happypack": "^5.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^0.23.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "ts-loader": "^8.0.6",
+    "mini-css-extract-plugin": "^1.1.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-loader": "^4.0.4",
+    "style-loader": "^2.0.0",
+    "stylus": "^0.54.8",
     "url-loader": "^2.1.0",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.0.7",
     "vuetify-loader": "^1.3.0",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.11.0"
   },
   "peerDependencies": {
     "vue": "^3.0.0-rc.5"
