--- a/packages/vuetify/tsconfig.checks.json
+++ b/packages/vuetify/tsconfig.checks.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.dev.json",
   // Tests are currently very unsafe, skip linting types in them for now
   "exclude": ["**/*.spec.ts"]
 }
