--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,18 @@ jobs:
           localization_branch_name: ${{ env.LOCAL_BRANCH }}
           crowdin_branch_name: ${{ env.CROWDIN_BRANCH }}
 
+      - name: Download zh-CN
+        uses: crowdin/github-action@1.0.9
+        with:
+          config: crowdin.yml
+          upload_sources: false
+          download_translations: true
+          push_translations: false
+          export_only_approved: true
+          download_language: zh-CN
+          localization_branch_name: ${{ env.LOCAL_BRANCH }}
+          crowdin_branch_name: ${{ env.CROWDIN_BRANCH }}
+
       - run: yarn run build:modified
         working-directory: ./packages/docs
       - run: node scripts/deploy-and-alias.js ${{ github.ref }}
