docs(markdownlintrc): add api-table element

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -11,6 +11,7 @@
       "acuity-calendar",
       "alert",
       "app-img",
+      "api-table",
       "backmatter",
       "become-sponsor",
       "br",
