--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -70,6 +70,7 @@
     "@mdi/font": "^4.5.95",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
+    "@vue/babel-plugin-jsx": "^1.0.2",
     "@vue/test-utils": "^2.0.0-beta.7",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
