--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-local-rules": "^0.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^7.1.0",
@@ -70,8 +71,8 @@
     "stylus-loader": "^4.1.1",
     "typescript": "^4.0.3",
     "vue": "^3.0.2",
-    "vue-loader": "^16.0.0-beta.8",
     "vue-analytics": "^5.16.1",
+    "vue-loader": "^16.0.0-beta.8",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
