--- a/.github/workflows/crowdin-uploads.yml
+++ b/.github/workflows/crowdin-uploads.yml
@@ -3,9 +3,9 @@ name: Crowdin Uploads
 on:
   push:
     branches:
-      - 'master'
+      - 'next'
     paths:
-    - 'packages/api-generator/src/locale/en/**'
+    - 'packages/api-generator/src/locale-alpha/en/**'
     - 'packages/docs/src/i18n/messages/en.json'
     - 'packages/docs/src/pages/en/**'
     - '.github/workflows/**'
@@ -14,7 +14,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
   CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
-  CROWDIN_BRANCH: master
+  CROWDIN_BRANCH: next
 
 jobs:
   upload-to-crowdin:
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Upload
-      uses: crowdin/github-action@1.0.13
+      uses: crowdin/github-action@1.0.19
       with:
         config: crowdin.yml
         crowdin_branch_name: ${{ env.CROWDIN_BRANCH }}
