--- a/package.json
+++ b/package.json
@@ -75,12 +75,10 @@
     "vue-loader": "^16.0.0-beta.8",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-merge": "^5.2.0"
+    "vuex": "^3.0.1"
   },
   "resolutions": {
-    "workbox-webpack-plugin": "^5.1.3"
+    "workbox-webpack-plugin": "^5.1.3",
+    "@vue/cli-service/webpack-dev-server": "3.9.0"
   }
 }
