--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,6 +9,18 @@
     "url": "git+https://github.com/vuetifyjs/vuetify.git",
     "directory": "packages/docs"
   },
+  "workspaces": {
+    "nohoist": [
+      "@vue/**",
+      "vue-cli-plugin-vuetify",
+      "vuetify-loader",
+      "frontmatter-markdown-loader",
+      "vue-server-renderer",
+      "webpack",
+      "webpack-dev-server",
+      "webpack-dev-middleware"
+    ]
+  },
   "scripts": {
     "build": "yarn build:client && yarn build:server && yarn prerender",
     "dev": "yarn serve",
@@ -28,9 +40,10 @@
     "docsearch.js": "^2.6.3",
     "node-fetch": "^2.6.0",
     "register-service-worker": "^1.7.1",
+    "vue": "^2.6.12",
     "vue-i18n": "^8.17.7",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.4.4",
+    "vuetify": "npm:vuetify@^2.4.0",
     "vuex": "^3.4.0",
     "webpack-node-externals": "^2.5.1"
   },
@@ -62,6 +75,7 @@
     "marked": "^1.1.0",
     "minify-css-string": "^1.0.0",
     "mkdirp": "^1.0.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "raw-loader": "^4.0.1",
     "sass-loader": "^9.0.2",
     "sitemap-webpack-plugin": "^0.8.1",
@@ -71,12 +85,14 @@
     "vue-gtag": "^1.6.5",
     "vue-meta": "^2.4.0",
     "vue-prism-component": "^1.2.0",
-    "vue-server-renderer": "^2.6.11",
+    "vue-server-renderer": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
     "vuelidate": "^0.7.5",
-    "vuetify-loader": "^1.3.0",
+    "vuetify-loader": "^1.7.2",
     "vuex-pathify": "^1.4.1",
     "vuex-router-sync": "^5.0.0",
     "webfontloader": "^1.6.28",
+    "webpack": "^4.0.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-virtual-modules": "^0.2.2",
     "workbox-precaching": "^5.1.3",
