--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -96,7 +96,10 @@
     "url-loader": "^2.1.0",
     "vue-meta": "^2.4.0",
     "vuetify-loader": "^1.3.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.2.0"
   },
   "peerDependencies": {
     "vue": "^3.0.0-rc.5"
