--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -95,11 +95,7 @@
     "stylus": "^0.54.8",
     "url-loader": "^2.1.0",
     "vue-meta": "^2.4.0",
-    "vuetify-loader": "^1.3.0",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0"
+    "vuetify-loader": "^1.3.0"
   },
   "peerDependencies": {
     "vue": "^3.0.0-rc.5"
