--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@typescript-eslint/parser": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
+    "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.2",
     "cross-spawn": "^6.0.5",
     "css-loader": "^3.1.0",
