feat(layout): add new layout system and components (#13067)
Co-authored-by: John Leider <john.j.leider@gmail.com>

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -98,7 +98,7 @@
     "vuetify-loader": "^1.3.0"
   },
   "peerDependencies": {
-    "vue": "^3.0.0-rc.5"
+    "vue": "^3.0.6"
   },
   "publishConfig": {
     "access": "public"
