--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -71,7 +71,7 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@vue/babel-plugin-jsx": "^1.0.2",
-    "@vue/test-utils": "^2.0.0-rc.2",
+    "@vue/test-utils": "2.0.0-beta.13",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-import-extension": "^1.4.3",
