chore(release): publish v3.0.0-alpha.0

--- a/packages/api-generator/package.json
+++ b/packages/api-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuetify/api-generator",
-  "version": "2.4.4",
+  "version": "3.0.0-alpha.0",
   "private": true,
   "description": "",
   "main": "src/index.js",
@@ -17,7 +17,7 @@
     "deepmerge": "^4.0.0",
     "rimraf": "^3.0.2",
     "vue": "^3.0.7",
-    "vuetify": "^2.4.4"
+    "vuetify": "^3.0.0-alpha.0"
   },
   "devDependencies": {
     "@babel/node": "^7.12.1"
