--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "vuex": "^3.0.1",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "3.9.0",
     "webpack-merge": "^5.2.0"
   },
   "resolutions": {
