docs(resources): UI Kits

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -46,6 +46,7 @@
       "vue-jobs",
       "vuetify-comparison",
       "vuetify-projects",
+      "vuetify-ui-kits",
       "why-vuetify-cards",
       "wireframe-examples"
     ]
