--- a/packages/vuetify/tsconfig.json
+++ b/packages/vuetify/tsconfig.json
@@ -6,7 +6,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "types": [
+        "jest",
+        "node"
+      ],
     }
   }
 }
