--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuetify",
   "description": "Vue Material Component Framework",
-  "version": "2.5.0-beta.0",
+  "version": "2.5.0",
   "author": {
     "name": "John Leider",
     "email": "john@vuetifyjs.com"
