--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "@octokit/core": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@vue/compiler-sfc": "^3.0.11",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.2",
     "cross-spawn": "^6.0.5",
     "css-loader": "^5.0.0",
+    "css-minimizer-webpack-plugin": "^2.0.0",
     "eslint": "^7.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.1",
@@ -61,25 +62,19 @@
     "jest-serializer-html": "^7.0.0",
     "lerna": "^3.16.2",
     "moment": "^2.27.0",
-    "sass": "^1.27.0",
-    "sass-loader": "^10.0.4",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.1.0",
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
-    "stylus-loader": "^4.1.1",
     "typescript": "^4.0.3",
-    "vue": "^3.0.7",
+    "vue": "^3.0.11",
     "vue-analytics": "^5.16.1",
     "vue-loader": "^16.1.2",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "3.9.0",
-    "webpack-merge": "^5.2.0"
-  },
-  "resolutions": {
-    "workbox-webpack-plugin": "^5.1.3",
-    "@vue/cli-service/webpack-dev-server": "3.9.0"
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "4.0.0-beta.3",
+    "webpack-merge": "^5.7.3"
   }
 }
