--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,18 +11,16 @@
   },
   "workspaces": {
     "nohoist": [
-      "@vue/**",
-      "vue-cli-plugin-vuetify",
-      "vuetify-loader",
-      "frontmatter-markdown-loader",
-      "vue-server-renderer",
-      "webpack",
-      "webpack-dev-server",
-      "webpack-dev-middleware"
+      "**/@vue/cli-service/**",
+      "**/vue-server-renderer",
+      "**/vue-template-compiler",
+      "**/vue-cli-plugin-vuetify",
+      "**/frontmatter-markdown-loader",
+      "**/vuetify-loader"
     ]
   },
   "scripts": {
-    "build": "yarn build:client && yarn build:server && yarn prerender",
+    "build": "yarn build:client",
     "dev": "yarn serve",
     "serve": "vue-cli-service serve",
     "lint": "yarn lint:md && vue-cli-service lint --no-fix",
@@ -37,7 +35,7 @@
   },
   "dependencies": {
     "algoliasearch": "^4.8.5",
-    "core-js": "^3.6.4",
+    "core-js": "^3.12.1",
     "node-fetch": "^2.6.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.12",
@@ -45,24 +43,23 @@
     "vue-instantsearch": "^3.4.3",
     "vue-router": "^3.1.6",
     "vuetify": "npm:vuetify@^2.4.0",
-    "vuex": "^3.4.0",
-    "webpack-node-externals": "^2.5.1"
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.3",
-    "@vue/cli-plugin-eslint": "~4.5.4",
-    "@vue/cli-plugin-pwa": "^4.5.4",
-    "@vue/cli-plugin-router": "~4.5.3",
-    "@vue/cli-plugin-vuex": "~4.5.3",
-    "@vue/cli-service": "~4.5.3",
+    "@vue/cli-plugin-babel": "~5.0.0-beta.1",
+    "@vue/cli-plugin-eslint": "~5.0.0-beta.1",
+    "@vue/cli-plugin-pwa": "~5.0.0-beta.1",
+    "@vue/cli-plugin-router": "~5.0.0-beta.1",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.1",
+    "@vue/cli-service": "~5.0.0-beta.1",
     "@vuetify/api-generator": "^3.0.0-alpha.5",
     "@vuetify/vue-cli-plugin-base": "~0.3.5",
     "cosmicjs": "^3.2.43",
     "date-fns": "^2.14.0",
-    "frontmatter-markdown-loader": "^3.5.0",
+    "frontmatter-markdown-loader": "^3.6.2",
     "git-date-extractor": "^3.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
     "intersection-observer": "^0.11.0",
     "json-loader": "^0.5.7",
     "local-web-server": "^4.2.1",
@@ -76,12 +73,11 @@
     "marked": "^1.1.0",
     "minify-css-string": "^1.0.0",
     "mkdirp": "^1.0.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "raw-loader": "^4.0.1",
-    "sass-loader": "^9.0.2",
-    "sitemap-webpack-plugin": "^0.8.1",
+    "raw-loader": "^4.0.2",
+    "sitemap-webpack-plugin": "^1.1.0",
     "vee-validate": "^3.3.7",
-    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vuex": "^3.5.1",
+    "vue-cli-plugin-vuetify": "^2.4.0",
     "vue-cookies": "^1.7.0",
     "vue-gtag": "^1.6.5",
     "vue-meta": "^2.4.0",
@@ -93,9 +89,8 @@
     "vuex-pathify": "^1.4.1",
     "vuex-router-sync": "^5.0.0",
     "webfontloader": "^1.6.28",
-    "webpack": "^4.0.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-virtual-modules": "^0.2.2",
+    "webpack-bundle-analyzer": "^4.4.1",
+    "webpack-virtual-modules": "^0.4.2",
     "workbox-precaching": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3"
