--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "@cypress/vue": "^3.0.1",
-    "@cypress/webpack-dev-server": "1.1.5",
+    "@cypress/webpack-dev-server": "^1.3.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
@@ -84,28 +84,26 @@
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.1",
     "cssnano": "^4.1.10",
-    "cypress": "^7.2.0",
+    "cypress": "^7.4.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^8.0.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jest": "^24.1.0",
-    "file-loader": "^6.1.1",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.0",
-    "mini-css-extract-plugin": "^1.1.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-loader": "^4.0.4",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss-loader": "^5.2.0",
     "style-loader": "^2.0.0",
-    "stylus": "^0.54.8",
-    "url-loader": "^2.1.0",
+    "url-loader": "^4.1.1",
     "vue-meta": "^2.4.0",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.7.2"
   },
   "peerDependencies": {
-    "vue": "^3.0.7"
+    "vue": "^3.0.11"
   },
   "publishConfig": {
     "access": "public"
